# rbup

./: Cargo.toml  README.md
src/: lib.rs  main.rs  rbup.rs  scan.rs
test/data/: scanfile01.txt
test/data/bup01/: bupindex  config
test/data/bup01/logs/refs/heads/: s01
test/data/bup01/objects/pack/: bup.bloom  midx-bb5b6d6b92a267a54bdc7440525e6b36eff6f997.midx  pack-0d8fdec5468092443057873783d241fee728ae73.idx  pack-0d8fdec5468092443057873783d241fee728ae73.pack
test/data/bup01/refs/heads/: s01
